@@ -1,4 +1,5 @@
 0.6.4 - currently working on
+- [#3460] Fix: Locale configcheck crashes TYPO3 Winstaller
 - [#3508] Cleanup: Replace space + tab with tab
 - [#3471] Fix: Test failure in tx_oelib_configurationCheck_testcase
 - [#3457] Fix: The language functions of the BE-user model return the default not the selected language
